fix: fixed bug where image container could become too small if window was resized horizontally

--- a/src/main/sass/foundation/sidebar.sass
+++ b/src/main/sass/foundation/sidebar.sass
@@ -66,6 +66,7 @@
             overflow: auto
             padding: 5px
             width: 100%
+            min-height: 200px
             @include theme()
                 background-color: theme-get('complementary_color')
 
